--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 pyrogram==2.0.106
 tgcrypto==1.2.5
-yt-dlp==2023.7.6
+git+https://github.com/yt-dlp/yt-dlp@b532556d0a85e7d76f8f0880861232fb706ddbc5
 APScheduler==3.10.4
 beautifultable==1.1.0
 ffmpeg-python==0.2.0
 PyMySQL==1.1.0
-celery==5.3.1
+celery==5.3.4
 filetype==1.2.0
 flower==2.0.1
 psutil==5.9.5
 influxdb==5.3.1
 beautifulsoup4==4.12.2
-fakeredis==2.18.0
+fakeredis==2.18.1
 supervisor==4.2.5
 tgbot-ping==1.0.7
 redis==5.0.0
