--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -56,7 +56,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/arm,linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ steps.dh_string.outputs.lowercase }}
