--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -46,7 +46,8 @@ jobs:
         with:
           images: ${{ steps.docker_image.outputs.image }}
           tags: |
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }}
+            type=raw,value=latest
+            type=ref,event=tag,prefix=v
             type=ref,event=tag
 
       - name: Build and push
