--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -47,8 +47,7 @@ jobs:
           images: ${{ steps.docker_image.outputs.image }}
           tags: |
             type=raw,value=latest
-            type=ref,event=tag,prefix=v
-            type=ref,event=tag
+            type=semver,pattern={{version}},enable=${{ startsWith(github.ref, 'refs/tags/') }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
